--- a/user/src/main/resources/application.properties
+++ b/user/src/main/resources/application.properties
@@ -16,6 +16,25 @@ eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
 eureka.client.service-url.default-zone = http://localhost:8761/eureka
 
+#actuator
+management.health.circuitbreakers.enabled=true
+management.endpoints.web.exposure.include = health
+management.endpoint.health.show-details=always
+
+# resilance4J
+resilience4j.circuitbreaker.instances.RATING_HOTEL_BREAKER.register-health-indicator=true
+resilience4j.circuitbreaker.instances.RATING_HOTEL_BREAKER.event-consumer-buffer-size=10
+resilience4j.circuitbreaker.instances.RATING_HOTEL_BREAKER.failure-rate-threshold=50
+resilience4j.circuitbreaker.instances.RATING_HOTEL_BREAKER.minimum-number-of-calls=5
+resilience4j.circuitbreaker.instances.RATING_HOTEL_BREAKER.automatic-transition-from-open-to-half-open-enabled=true
+resilience4j.circuitbreaker.instances.RATING_HOTEL_BREAKER.wait-duration-in-open-state=6s
+resilience4j.circuitbreaker.instances.RATING_HOTEL_BREAKER.permitted-number-of-calls-in-half-open-state=3
+resilience4j.circuitbreaker.instances.RATING_HOTEL_BREAKER.sliding-window-size=10
+resilience4j.circuitbreaker.instances.RATING_HOTEL_BREAKER.sliding-window-type=COUNT_BASED
+resilience4j.retry.instances.RATING_HOTEL_SERVICES.max-attempts=3
+resilience4j.retry.instances.RATING_HOTEL_SERVICES.wait-duration=5s
+
+
 # url path from web broswer
 server.servlet.context-path=/api/v1
 
