path changes of feign client

--- a/apigateway/src/main/resources/application.yml
+++ b/apigateway/src/main/resources/application.yml
@@ -7,6 +7,11 @@ spring:
     name: API-GATEWAY
   main:
     allowBeanDefinitionOverriding: true
+  security:
+    user:
+      name: spydev
+      password: admin
+    
 #api gatewaysetting
 
   cloud:
